@@ -4,29 +4,30 @@ import java.io.BufferedReader;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
-import java.util.ArrayList;
+import java.util.*;
 
 
 public class Enigma {
     private ArrayList<Rotore> rotori;
     private Riflessore riflessore;
-    private final ArrayList<String[]> combinazioniRotori;
-    private final ArrayList<String> combinazioniRiflessori;
+    private final TreeMap<String, ArrayList<String>> combinazioniRotori;
+    private final TreeMap<String , String> combinazioniRiflessori;
 
 
 
 
     public Enigma(String pRotori, String pRiflessori) throws IOException, FileNotFoundException {
         this.rotori = new ArrayList<>();
-        this.combinazioniRotori = new ArrayList<>();
-        this.combinazioniRiflessori = new ArrayList<>();
+        this.combinazioniRotori = new TreeMap<>();
+        this.combinazioniRiflessori = new TreeMap<>();
         this.caricaRotori(pRotori);
         this.caricaRiflessori(pRiflessori);
-        this.rotori.add(new Rotore(this.combinazioniRotori.get(0)[0], this.combinazioniRotori.get(0)[1]));
-        this.rotori.add(new Rotore(this.combinazioniRotori.get(1)[0], this.combinazioniRotori.get(1)[1]));
-        this.rotori.add(new Rotore( this.combinazioniRotori.get(2)[0], this.combinazioniRotori.get(2)[1]));
-        this.riflessore = new Riflessore(this.combinazioniRiflessori.getFirst());
-
+        this.rotori.add(new Rotore(this.combinazioniRotori.get("I").getFirst(), this.combinazioniRotori.get("I").getLast()));
+        this.rotori.add(new Rotore(this.combinazioniRotori.get("II").getFirst(), this.combinazioniRotori.get("II").getLast()));
+        this.rotori.add(new Rotore(this.combinazioniRotori.get("III").getFirst(), this.combinazioniRotori.get("III").getLast()));
+        this.riflessore = new Riflessore(this.combinazioniRiflessori.get("A"));
+        //System.out.println(this.combinazioniRotori);
+        //System.out.println(this.combinazioniRiflessori);
 
     }
 
@@ -34,27 +35,38 @@ public class Enigma {
     private void caricaRotori(String percorso) throws IOException, FileNotFoundException {
         BufferedReader br = new BufferedReader( new FileReader(percorso));
         String riga;
-        String[] elementi;
         while ((riga = br.readLine()) != null) {
+            String[] elementi;
+            ArrayList<String> dati = new ArrayList<>();
             elementi = riga.split(";");
-            this.combinazioniRotori.add(elementi);
+            dati.add(elementi[1]);
+            dati.add(elementi[2]);
+            this.combinazioniRotori.put(elementi[0], dati);
+
         }
+        br.close();
     }
 
     private void caricaRiflessori(String percorso) throws IOException, FileNotFoundException {
         BufferedReader br = new BufferedReader( new FileReader(percorso));
         String riga;
         while ((riga = br.readLine()) != null) {
-            this.combinazioniRiflessori.add(riga);
+            String[] elementi;
+            elementi = riga.split(";");
+            this.combinazioniRiflessori.put(elementi[0], elementi[1]);
         }
+        br.close();
     }
 
-    public void modificaCombinazioneRotore (int nRotore, int nCombinazione) {
-        this.rotori.get(nRotore).modificaCombinazione(this.combinazioniRotori.get(nCombinazione)[0], combinazioniRotori.get(nCombinazione)[1]);
+    public void modificaCombinazioneRotore (int nRotore, String combinazione) {
+        this.rotori.get(nRotore).modificaCombinazione(this.combinazioniRotori.get(combinazione).getFirst(), combinazioniRotori.get(combinazione).getLast());
+        //System.out.println(this.combinazioniRotori);
     }
 
-    public void modificaCombinazioneRiflessori (int nCombinazione) {
-        this.riflessore.modificaCombinazione(this.combinazioniRiflessori.get(nCombinazione));
+    public void modificaCombinazioneRiflessori (String combinazione) {
+        this.riflessore.modificaCombinazione(this.combinazioniRiflessori.get(combinazione));
+        //System.out.println(this.combinazioniRiflessori);
+
     }
 
     public void ruota() {
@@ -86,6 +98,14 @@ public class Enigma {
     public String cripta(String lettera) {
 
         return this.criptaIndietro(this.riflessore.cripta(this.criptaAvanti(lettera)));
+    }
+
+    public Set<String> getCombinazioniRiflessori() {
+        return this.combinazioniRiflessori.keySet();
+    }
+
+    public Set<String> getCombinazioniRotori() {
+        return this.combinazioniRotori.keySet();
     }
 
 
